tests/parser/fail/super-local.som
"test:
failMessage:
  - contains: define
  - contains: super
"

SuperLocal = (
  test = (
    |super|

    'you shant pass'
  )
)
